--- a/index.html
+++ b/index.html
@@ -31,7 +31,31 @@
     <main class="principal">
 
         <section class="banner container" id="home" >
+            <div class="banner_div">
 
+                <div class="banner_apresentacao">
+                    <p class="apresentcao_ola">Olá, eu sou</p>
+                    <h1 class="apresentacao_nome">Vinicius Mello<b class="ponto">.</b></h1>
+                    <h2 class="apresentacao_sub">Desenvolvedor Front-End e Back-End</h2>
+
+                    <div class="banner_links">
+                        <a href="https://github.com/ViniciusFelicianoMello" target="_blank" class="link_img">
+                            <img src="assets/github1.png" alt="Github">                        
+                        </a>
+                        <a href="https://www.linkedin.com/in/vinicius-feliciano-mello/" target="_blank" class="link_img">
+                            <img src="assets/linkedin.png" alt="Linkedin">                     
+                        </a>
+                        <a href="https://www.instagram.com/viinifeliciano/" target="_blank" class="link_img">
+                            <img src="assets/instagram1.png" alt="Instagram"> 
+                        </a>
+                    </div>
+                </div>
+
+                <div class="banner_imagem">
+                    <img src="" alt="Imagem Vinicius" class="banner_img">
+                    <a href="https://curriculum-vitae-vinicius.vercel.app/" target="_blank" class="curriculo_link">C.V.</a>
+                </div>
+            </div>
         </section>
 
     </main>
