--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="cabecalho">
-        <div class="logo__menu">
+        <div class="cabecalho_logo">
             <img src="assets/VFM LOGO.png" class="cabecalho_img" alt="Logo VFM">
         </div>
 
@@ -26,7 +26,25 @@
         <div class="contate-me">
             <a href="#contato" class="contate-me-botao">Contate-me</a>
         </div>
+
+        <div class=cabecalho_menu>
+            <input type="checkbox" id="menu" class="opcoes_botao">
+            <label for="menu" class="opcoes_rotulo">
+                <span class="cabecalho_menu-hamburguer menu_img "></span>
+            </label>
+            <ul class="lista_menu">
+                <li class="lista_menu_lista"><a href="#home" class="menu_opcao click">Home</a></li>
+                <li class="lista_menu_lista"><a href="#sobremim" class="menu_opcao click2">Sobre mim</a></li>
+                <li class="lista_menu_lista"><a href="#tecnologias" class="menu_opcao click2">Tecnologia</a></li>
+                <li class="lista_menu_lista"><a href="#servicos" class="menu_opcao click1">Serviços</a></li>
+                <li class="lista_menu_lista"><a href="#projetos" class="menu_opcao click1">Projetos</a></li>
+                <li class="lista_menu_lista contate-menu"><a href="#contato" class="menu_opcao contate-menu">Contate-me</a></li>
+            </ul>
+        </div>
+
     </header>
+
+
 
     <main class="principal">
 
