--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li class="lista_menu_lista"><a href="#tecnologias" class="menu_opcao click2">Tecnologia</a></li>
                 <li class="lista_menu_lista"><a href="#servicos" class="menu_opcao click1">Serviços</a></li>
                 <li class="lista_menu_lista"><a href="#projetos" class="menu_opcao click1">Projetos</a></li>
-                <li class="lista_menu_lista contate-menu"><a href="#contato" class="menu_opcao contate-menu">Contate-me</a></li>
+                <li class="lista_menu_lista contate-menu"><a href="#contato" class="menu_opcao contate-menu">Contate-me</a></li>          
             </ul>
         </div>
 
@@ -52,26 +52,25 @@
             <div class="banner_div">
 
                 <div class="banner_apresentacao">
-                    <p class="apresentcao_ola">Olá, eu sou</p>
+                    <p class="apresentcao_ola">Olá, eu sou<a href="https://curriculum-vitae-vinicius.vercel.app/" target="_blank" class="custom-botao curriculo">Curriculo</a></p>
                     <h1 class="apresentacao_nome">Vinicius Mello<b class="ponto">.</b></h1>
                     <h2 class="apresentacao_sub">Desenvolvedor Front-End e Back-End</h2>
 
                     <div class="banner_links">
-                        <a href="https://github.com/ViniciusFelicianoMello" target="_blank" class="link_img">
+                        <a href="https://github.com/ViniciusFelicianoMello" target="_blank" class="link_img img_gli">
                             <img src="assets/github1.png" alt="Github">                        
                         </a>
-                        <a href="https://www.linkedin.com/in/vinicius-feliciano-mello/" target="_blank" class="link_img">
+                        <a href="https://www.linkedin.com/in/vinicius-feliciano-mello/" target="_blank" class="link_img img_gli">
                             <img src="assets/linkedin.png" alt="Linkedin">                     
                         </a>
-                        <a href="https://www.instagram.com/viinifeliciano/" target="_blank" class="link_img">
+                        <a href="https://www.instagram.com/viinifeliciano/" target="_blank" class="link_img img_gli">
                             <img src="assets/instagram1.png" alt="Instagram"> 
                         </a>
                     </div>
                 </div>
 
                 <div class="banner_imagem">
-                    <img src="" alt="Imagem Vinicius" class="banner_img">
-                    <a href="https://curriculum-vitae-vinicius.vercel.app/" target="_blank" class="curriculo_link">C.V.</a>
+                    <img src="assets/ViniGraf.png" alt="Imagem Vinicius" class="banner_img">
                 </div>
             </div>
         </section>
