--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 
-
+<!-- ============ CABEÇALHO ============  -->
 <body>
     <header class="cabecalho">
         <div class="cabecalho_logo">
@@ -45,10 +45,11 @@
     </header>
 
 
-
+<!-- ============ PRINCIPAL ============  -->
     <main class="principal">
 
-        <section class="banner container" id="home" >
+<!-- ============ HOME ============  -->
+        <section class="banner" id="home" >
             <div class="banner_div">
 
                 <div class="banner_apresentacao">
@@ -75,6 +76,50 @@
             </div>
         </section>
 
+
+<!-- ============ SOBRE MIM ============  -->
+        <section class="sobremim container" id="sobremim">
+
+                <div class="titulo">
+                    <h2 class="pagina_titulo">Sobre mim</h2>
+                </div>
+                <div class="sobremim_div">
+                    <div class="sobremim_historia">
+                            
+                    </div>
+                    
+                    <div class="sobremim_desc">
+                        <div class="sobremim_desc_texto">
+                            <p class="sobremim_desc_texto-sobre">Sou um desenvolvedor apaixonado por tecnologia, estou em busca de aprender e me desenvolver pessoalmente e profissionalmente, sempre colaborando com a empresa e equipe. Estou iniciando na carreira de programador e tenho conhecimento em <b class="sobremim_destaque">JavaScript, HTML, CSS, C#, Dotnet, Git e Github</b>.</p>
+                        </div>
+                        <div class="sobremim_desc_infos">
+                            <div class="desc_infos_card">
+                                <span class="desc_info_titulo">10+</span>
+                                <span class="desc_info_texto">Projetos <br> completos</span>
+                            </div>
+
+                            <div class="desc_infos_card">
+                                <span class="desc_info_titulo">1º<span>
+                                <span class="desc_info_texto">Ano <br> estudando</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+
+<!-- ============ HABILIDADES ============  -->
+
+
+<!-- ============ SERVIÇOS ============  -->
+
+
+<!-- ============ PROJETOS ============  -->
+
+
+<!-- ============ CONTATO ============  -->
+
+
+<!-- ============ FOOTER ============  -->
     </main>
 
 </body>
