atualizacao cor e servicos
atualizando cores e responsividade e algumas flexbox e position

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
                     <h2 class="apresentacao_sub">Desenvolvedor Front-End e Back-End</h2>
 
                     <div class="banner_links">
-                        <a href="https://github.com/ViniciusFelicianoMello" target="_blank" class="link_img img_gli">
-                            <img src="assets/icons/github1.png" alt="Github">                        
+                        <a href="https://github.com/ViniciusFelicianoMello" target="_blank" class="link_img">
+                            <img src="assets/icons/github1.png" alt="Github" class="img_link">                        
                         </a>
-                        <a href="https://www.linkedin.com/in/vinicius-feliciano-mello/" target="_blank" class="link_img img_gli">
-                            <img src="assets/icons/linkedin.png" alt="Linkedin">                     
+                        <a href="https://www.linkedin.com/in/vinicius-feliciano-mello/" target="_blank" class="link_img">
+                            <img src="assets/icons/linkedin.png" alt="Linkedin" class="img_link">                     
                         </a>
-                        <a href="https://www.instagram.com/viinifeliciano/" target="_blank" class="link_img img_gli">
-                            <img src="assets/icons/instagram1.png" alt="Instagram"> 
+                        <a href="https://www.instagram.com/viinifeliciano/" target="_blank" class="link_img">
+                            <img src="assets/icons/instagram1.png" alt="Instagram" class="img_link">    
                         </a>
                     </div>
                 </div>
