--- a/thankspage.html
+++ b/thankspage.html
@@ -12,6 +12,7 @@
     <main class="principal">
         <div class="thankspage">
             <div class="thankspage_box">
+                <a href="index.html" class="thankspage_voltar"> ← </a>
                 <h2 class="thankspage_titulo">Obrigado</h2>
                 <p class="thanskpage_text">Em breve retornarei para você, se preferir, pode sempre me enviar mensagem por whatsapp.</p>
                 <div class="thankspage_links">
