atualização de tudo
melhorei a responsividade e adicionei a aba projetos

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="cabecalho">
         <div class="cabecalho_logo">
-            <img src="assets/VFM LOGO.png" class="cabecalho_img" alt="Logo VFM">
+            <img src="assets/VFM.png" class="cabecalho_img" alt="Logo VFM">
         </div>
 
         <div class="opcoes">
@@ -47,7 +47,7 @@
             </ul>
         </div>
 
-    </header>
+    </header><!--cabecalho-->
 
 <!-- ============ PRINCIPAL ============  -->
     <main class="principal">
@@ -78,7 +78,7 @@
                     <img src="assets/ViniGraf.png" alt="Imagem Vinicius" class="banner_img">
                 </div>
             </div>
-        </section>
+        </section> <!--banner-->
 
 <!-- ============ SOBRE MIM ============  -->
         <section class="sobremim container" id="sobremim">
@@ -202,7 +202,7 @@
                         </div>
                     </div>
                 </div>
-        </section>
+        </section> <!--sobremim-->
 
 <!-- ============ HABILIDADES ============  -->
         <section class="habilidades container" id="habilidades">
@@ -317,7 +317,7 @@
                 </div>
             
             </div>
-        </section>
+        </section><!--habilidades-->
 
 <!-- ============ SERVIÇOS ============  -->
 <section class="servicos container" id="servicos">
@@ -394,14 +394,60 @@
             </div>
         </div>
     
-</section>
+</section> <!--servicos-->
 
 <!-- ============ PROJETOS ============  -->
 <section class="projetos container" id="projetos">
     <div class="titulo">
         <h2 class="pagina_titulo">Projetos</h2>
     </div>
-</section>
+
+    <div class="projetos_div">
+        <!-- projeto 1 -->
+        <div class="projetos_img" style="background-image: url(assets/projetos/Vcalculator.png);">
+            <div class="projetos_cavalete">
+            <img src="assets/cavalete.png" alt="cavalete" class="cavalete">
+                <div class="projetos_overlay">
+                    <h3 class="projetos_titulo">Vcalculator</h3>
+                    <p class="projetos_texto">Vcalculator é um projeto de calculadoras, onde é possivel calcular normalmente e também tem uma aba para calcular IMC.</p>
+                    <div class="projetos_links">
+                        <a href="https://v-calculator-eta.vercel.app/IMC.html" target="_blank" class="projetos_link_btn">Website</a>
+                        <a href="https://github.com/ViniciusFelicianoMello/VCalculator" target="_blank" class="projetos_link_btn">Repositorio</a>
+                    </div> <!--links-->
+                </div><!--overlay-->
+            </div><!--cavalete-->
+        </div> <!--img-->
+        <!-- projeto 2 -->
+        <div class="projetos_img" style="background-image: url(assets/projetos/Vcalculator.png);">
+            <div class="projetos_cavalete">
+            <img src="assets/cavalete.png" alt="cavalete" class="cavalete">
+                <div class="projetos_overlay">
+                    <h3 class="projetos_titulo">Vcalculator</h3>
+                    <p class="projetos_texto">Vcalculator é um projeto de calculadoras, onde é possivel calcular normalmente e também tem uma aba para calcular IMC.</p>
+                    <div class="projetos_links">
+                        <a href="https://v-calculator-eta.vercel.app/IMC.html" target="_blank" class="projetos_link_btn">Website</a>
+                        <a href="https://github.com/ViniciusFelicianoMello/VCalculator" target="_blank" class="projetos_link_btn">Repositorio</a>
+                    </div> <!--links-->
+                </div><!--overlay-->
+            </div><!--cavalete-->
+        </div> <!--img-->
+        <!-- projeto 3 -->
+        <div class="projetos_img" style="background-image: url(assets/projetos/Vcalculator.png);">
+            <div class="projetos_cavalete">
+            <img src="assets/cavalete.png" alt="cavalete" class="cavalete">
+                <div class="projetos_overlay">
+                    <h3 class="projetos_titulo">Vcalculator</h3>
+                    <p class="projetos_texto">Vcalculator é um projeto de calculadoras, onde é possivel calcular normalmente e também tem uma aba para calcular IMC.</p>
+                    <div class="projetos_links">
+                        <a href="https://v-calculator-eta.vercel.app/IMC.html" target="_blank" class="projetos_link_btn">Website</a>
+                        <a href="https://github.com/ViniciusFelicianoMello/VCalculator" target="_blank" class="projetos_link_btn">Repositorio</a>
+                    </div> <!--links-->
+                </div><!--overlay-->
+            </div><!--cavalete-->
+        </div> <!--img-->
+
+    </div><!--projetos_div-->
+</section><!--projetos-->
 
 <!-- ============ CONTATO ============  -->
 <section class="contact container" id="contact">
@@ -466,10 +512,10 @@
             <input type="hidden" name="_autoresponse" value="Obrigado por me enviar uma mensagem, Por favor, aguarde que eu logo respondorei para você, se quiser mais velocidade, envie uma mensagem por whatsapp.">
         </form>
     </div>
-</section>
+</section> <!--contact-->
 
 <!-- ============ FOOTER ============  -->
-    </main>
+    </main> <!--principal-->
 
 
     <script src="javascript/contador.js"></script>
