--- a/index.html
+++ b/index.html
@@ -418,15 +418,15 @@
             </div><!--cavalete-->
         </div> <!--img-->
         <!-- projeto 2 -->
-        <div class="projetos_img" style="background-image: url(assets/projetos/Vcalculator.png);">
+        <div class="projetos_img" style="background-image: url(assets/projetos/ScreenSound.png);">
             <div class="projetos_cavalete">
             <img src="assets/cavalete.png" alt="cavalete" class="cavalete">
                 <div class="projetos_overlay">
-                    <h3 class="projetos_titulo">Vcalculator</h3>
-                    <p class="projetos_texto">Vcalculator é um projeto de calculadoras, onde é possivel calcular normalmente e também tem uma aba para calcular IMC.</p>
+                    <h3 class="projetos_titulo">Screen Sound</h3>
+                    <p class="projetos_texto">Screen Sound é um projeto realizado no curso de C# da Alura, onde é possivel cadastrar musicas e albuns, listar, remover e dar notas para os mesmos. Também utilizei uma API com diversas bandas e aprendi a controlar suas informações.</p>
                     <div class="projetos_links">
-                        <a href="https://v-calculator-eta.vercel.app/IMC.html" target="_blank" class="projetos_link_btn">Website</a>
-                        <a href="https://github.com/ViniciusFelicianoMello/VCalculator" target="_blank" class="projetos_link_btn">Repositorio</a>
+                        <!-- <a href="https://v-calculator-eta.vercel.app/IMC.html" target="_blank" class="projetos_link_btn">Website</a> -->
+                        <a href="https://github.com/AluraPortfolio/ScreenSound-e-OO" target="_blank" class="projetos_link_btn">Repositorio</a>
                     </div> <!--links-->
                 </div><!--overlay-->
             </div><!--cavalete-->
