--- a/index.html
+++ b/index.html
@@ -432,15 +432,15 @@
             </div><!--cavalete-->
         </div> <!--img-->
         <!-- projeto 3 -->
-        <div class="projetos_img" style="background-image: url(assets/projetos/Vcalculator.png);">
+        <div class="projetos_img" style="background-image: url(assets/projetos/Alura\ Lobby.png);">
             <div class="projetos_cavalete">
             <img src="assets/cavalete.png" alt="cavalete" class="cavalete">
                 <div class="projetos_overlay">
-                    <h3 class="projetos_titulo">Vcalculator</h3>
-                    <p class="projetos_texto">Vcalculator é um projeto de calculadoras, onde é possivel calcular normalmente e também tem uma aba para calcular IMC.</p>
+                    <h3 class="projetos_titulo">Cursos Lobby</h3>
+                    <p class="projetos_texto">Cursos Lobby é uma pagina que eu criei para linkar e organizar todos os projetos que realizei e realizarei em cursos e na faculdade.</p>
                     <div class="projetos_links">
-                        <a href="https://v-calculator-eta.vercel.app/IMC.html" target="_blank" class="projetos_link_btn">Website</a>
-                        <a href="https://github.com/ViniciusFelicianoMello/VCalculator" target="_blank" class="projetos_link_btn">Repositorio</a>
+                        <a href="https://lobby-cursos.vercel.app/" target="_blank" class="projetos_link_btn">Website</a>
+                        <a href="https://github.com/ViniciusFelicianoMello/Lobby-Cursos" target="_blank" class="projetos_link_btn">Repositorio</a>
                     </div> <!--links-->
                 </div><!--overlay-->
             </div><!--cavalete-->
@@ -458,7 +458,7 @@
     <div class="contact_div">
         <!-- ===== LADO DIREITO IMAGEM ===== -->
         <div class="contact_infos">
-            <img src="assets/VFM LOGO.png" alt="" class="contact_img">
+            <img src="assets/email.png" alt="" class="contact_img">
             <!-- ====== BOX PHONE ====== -->
             <a href="thankspage.html" class="contact_info_box">
             
