projeto finalizado por enquanto
adicionei link wpp e mudei a cor dos botoes no thankspage

--- a/thankspage.html
+++ b/thankspage.html
@@ -16,7 +16,7 @@
                 <h2 class="thankspage_titulo">Obrigado</h2>
                 <p class="thanskpage_text">Em breve retornarei para você, se preferir, pode sempre me enviar mensagem por whatsapp.</p>
                 <div class="thankspage_links">
-                    <a class="thankspage_links_ancora" href="#">
+                    <a class="thankspage_links_ancora" target="_blank" href="https://wa.me/message/66LU3HDFMEWVO1">
                        <img src="assets/icons/phone.png" alt="telefone" class="thankspage_img">
                        <span class="thankspage_links_text">(11) 9 7174-7781</span>
                     </a>
