--- a/index.html
+++ b/index.html
@@ -277,9 +277,27 @@
                         <div class="habilidades_info">
                             <div class="habilidade_info_ling">
                                 <img src="assets/linguagens/dotnet.png" alt="Dotnet" class="linguagens_img">
-                                <h3 class="habilidade_ling_titulo">.Dotnet core</h3>
+                                <h3 class="habilidade_ling_titulo">Dotnet core</h3>
                             </div>
                         </div>
+                        <!-- ===== LINGUAGEM ===== -->
+                        <div class="habilidades_info">
+                            <div class="habilidade_info_ling">
+                                <img src="assets/linguagens/python.png" alt="Python" class="linguagens_img">
+                                <h3 class="habilidade_ling_titulo">Python</h3>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="habilidades_conjunto cen">  
+                    <!-- ===== LINGUAGEM ===== -->                      
+                        <div class="habilidades_info">
+                            <div class="habilidade_info_ling">
+                                <img src="assets/linguagens/sql.png" alt="SQL" class="linguagens_img">
+                                <h3 class="habilidade_ling_titulo">SQL</h3>
+                            </div>
+                        </div>
+                
                     </div>
                 </div>
 
