--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                     <h3 class="projetos_titulo">Vcalculator</h3>
                     <p class="projetos_texto">Vcalculator é um projeto de calculadoras, onde é possivel calcular normalmente e também tem uma aba para calcular IMC.</p>
                     <div class="projetos_links">
-                        <a href="https://v-calculator-eta.vercel.app/IMC.html" target="_blank" class="projetos_link_btn">Website</a>
+                        <a href="https://v-calculator-eta.vercel.app/index.html" target="_blank" class="projetos_link_btn">Website</a>
                         <a href="https://github.com/ViniciusFelicianoMello/VCalculator" target="_blank" class="projetos_link_btn">Repositorio</a>
                     </div> <!--links-->
                 </div><!--overlay-->
